# Hisilicon

./: README.md
code_10280/Pegasus/interconnection_oled/: BUILD.gn  app_demo_i2c_oled.c  app_demo_i2c_oled.h  app_demo_uart.c  app_demo_uart.h  hisignalling_protocol.c  hisignalling_protocol.h  ssd1306_oled.h
code_10280/Pegasus/robot_car/: BUILD.gn  hal_iot_gpio.c  hal_iot_gpio_ex.c  iot_gpio_ex.h  robot_control.c  robot_control.h  robot_l9110s.c  robot_l9110s.h  trace_model.c  trace_model.h
code_10280/Taurus/aac_file/: 0.aac  1.aac  2.aac  3.aac  4.aac  5.aac  6.aac  7.aac  8.aac
code_10280/Taurus/cnn_trash_classify/: cnn_trash_classify.c  cnn_trash_classify.h
code_10280/Taurus/interconnection_server/: hisignalling.c  hisignalling.h
