
static_library("interconnectionClientDemo") {
  sources = [
    "app_demo_uart.c",
    "hal_iot_gpio_ex.c",
    "hisignalling_protocol.c",
    "app_demo_i2c_oled.c",
  ]

  include_dirs = [
    "./",
    "//utils/native/lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iot_hardware/peripheral/interfaces/kits",
  ]
}
